[project]
name = "llmpxy"
version = "0.1.0"
description = "Multi-protocol LLM proxy for OpenAI and Anthropic compatible APIs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.0",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
llmpxy = "llmpxy.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmpxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
